update with tweets and mongoose

--- a/partials/founders.html
+++ b/partials/founders.html
@@ -20,7 +20,7 @@
     <br>
     <section class="tab" >
       <div class="nav nav-pills">
-		<h1 style="text-align:left; display:inline;"> Name : {{founders.name}} </h1> <button ng-click="delete()" class="btn btn-danger">-</button><br> 
+		<h1 style="text-align:left; display:inline;"> Name : {{founders.name}} </h1> <button ng-click="delete(founders)" class="btn btn-danger">-</button><br>
  		    <a id="demo1"  href ng-click="PCtrl.selectTab(1)"> Role  </a> 
         <a id="demo1"  href ng-click="PCtrl.selectTab(2)">  Memory  </a> 
         <a id="demo1" href ng-click="PCtrl.selectTab(3)">  Picture  </a> <br>
