concat,minify,uglify

--- a/partials/tweets.html
+++ b/partials/tweets.html
@@ -1,12 +1,11 @@
 <html>
-<head>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"> </script>
-    <script src="../js/app.js"> </script>
-    <script src="../js/routes.js"> </script>
-    <script src="../js/angular-route.js"> </script>
-    <script src="../js/socket.io.js"> </script>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <script src="../js/Client/angular.min.js"></script>
+    <script src="../js/Client/angular-route.js"></script>
+    <script src="../js/Server/socket.io.js"></script>
+    <!-- Concat & Uglify of client JS files -->
+    <script src="../build/js/output.min.js"></script>  
+    <!-- Concat & Minify of CSS files  -->
+    <link rel="stylesheet" type="text/css" href="../build/css/styles.css"/>
     <title> 
     Biggest Tech Company
     </title> 
