--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,5 +1,5 @@
 body {
-  	background-image: url("../../img/back1.jpg");
+  	background-image: url("../img/back1.jpg");
     background-repeat:no-repeat;
     background-size:cover;
   	font: 13px/20px 'Lucida Grande', Tahoma, Verdana, sans-serif;
